--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,12 +3,12 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
-
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
+
+- type: myanimelist
+  icon: "fa-solid fa-list"
 
 - type: rss
   icon: "fas fa-rss"
