--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/Bocchi_icon.png
+avatar: assets/img/about/Bocchi_icon.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
