update config for comment using giscus

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ avatar: assets/img/about/Bocchi_icon.png
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -95,10 +95,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: sogood99/sogood99.github.io # <gh-username>/<repo>
+    repo_id: MDEwOlJlcG9zaXRvcnk0MDEyMDA1MTI=
+    category: Announcements
+    category_id: DIC_kwDOF-nVgM4CZn5c
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
